fix collapse button height calculation

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -317,7 +317,7 @@
         z-index: 1;
         align-items: center;
         justify-content: flex-end;
-        height: @headline-height / 2 + 10px;
+        height: (@headline-height / 2 + 10px);
         padding: 0 5px;
         transition: background-color 0.5s, color 0.2s;
         color: @color-fade4;
